--- a/public_html/html/css/screen-sm.less
+++ b/public_html/html/css/screen-sm.less
@@ -6,6 +6,7 @@
 @media (min-width: 768px) and (max-width: 991px){
 .hei-menu{
     	font-size:13px;
+    	padding-left:0px;
 }
 .navbar-nav > li:not(:last-child) {
     margin-right: 0px;
@@ -26,7 +27,7 @@
 	
 .format-stand{
 	padding-bottom:0px;
-	left: 55%;
+	left: 15%;
 	h4{
 		font-size:17px;
 	}
@@ -34,7 +35,7 @@
 		font-size:13px;
 	}
 	a{
-		font-size:13px;
+		font-size:10px;
 		
 	}
 }
