--- a/public_html/html/css/screen-xs.less
+++ b/public_html/html/css/screen-xs.less
@@ -8,6 +8,9 @@
 .navbar-header{
 	display:block;
 }
+.hei-menu{
+    	padding-left:0px;
+}
 
 .add-info-mid {
   background-color: #ffffff;
@@ -138,11 +141,10 @@
 }
  
 .format-stand {
-	max-width: 65%;
-    left: 50%;
+	max-width: 41%;
+    left: 10%;
     right:0px;
     text-shadow: none;
-	padding-bottom: 3px;
 	font-size: 5px;
 	h4{
 		font-size: 7px;
