--- a/public_html/html/css/style.less
+++ b/public_html/html/css/style.less
@@ -77,7 +77,7 @@ body{
     color: @color-white;
 }
 .hei-menu{
-	padding-left: 10px;
+	padding-left: 230px;
 	min-height:30px;
 }
 /*End menu */
@@ -85,9 +85,9 @@ body{
 /*slider */
 
 .format-stand {
-	left: 58%;
-    padding-bottom: 14%;
-    right:10%;
+	left: 19%;
+    padding-bottom: 9%;
+    right:48%;
     text-shadow: none;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -171,7 +171,7 @@ h4{
 	max-width: 32%;
 }
 .add-info-active{
-	background-color: #f6a299;
+	background-color: #0586AD;
 }
 .add-info-mid{
 	background-color: @color-white;
@@ -188,14 +188,13 @@ h4{
 #add_right:hover{
 	.add-info-active;
 }
-.regis-blue{
-	background-color: #00baf2;
-    border-color: #00baf3;
+.regis-red{
+	background-color: @color-red;
     color: #fff;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 20px;
-    min-width: 170px;
+    min-width: 270px;
 }
 
 
@@ -221,11 +220,18 @@ h4{
 .bag-gray{
 	background-color:@color-gray;
 }
+.bag-red{
+	background-color:@color-red;
+}
 .learn-content{
 	padding-top:50px;
 	padding-bottom:30px;
-	max-width: 600px;
+	max-width: 500px;
 	margin-left: 335px;
+}
+.no-mar{
+	margin-left: -5px;
+	margin-right: -5px;
 }
 .none-padd{
 	padding-left: 5px;
@@ -255,24 +261,45 @@ h4{
     text-justify: inter-word;
     min-height: 220px;
 }
+.intro-title{
+	background-color: #f1f1f1;
+	padding-left: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	a{
+		color: @color-red;
+		font-weight: bold;
+		font-size: 18px;
+	}
+}
+.bo-intro{
+	background-color: #e5e5e5;
+	padding: 7% 27%;
+	height: 283px;
+}
 /* END Limit practice */
 
 /*JLIT Free */
 .a-register{
 	h2{
-		font-size: 40px;
+		font-size: 30px;
 		font-weight: bold;
 		margin-bottom: 50px;
+		color: @color-white;
 	}
 	a{
-		background-color: @color-red;
+		background-color: #ab2929;
 		color: @color-white;
-		padding: 15px 40px 15px 40px;
+		padding: 5px 50px;
 		font-size: 30px;
 		font-weight: bold;
 		text-transform: uppercase;
 		text-decoration:none;
-		margin-left: 170px;
+		border: 3px solid #e79c9c;
+		border-radius: 5px;
+	}
+	img{
+		width: 30px;
 	}
 }
 
