--- a/public_html/html/css/screen-md.less
+++ b/public_html/html/css/screen-md.less
@@ -12,4 +12,15 @@
     }
 }
 
+
+.footer-top{
+	.txt-cent{
+		margin-top:53px;
+		padding-left: 3px;
+	}
+	.img-right{
+			margin-left: 95px;
+	}
+}
+
 }
