--- a/public_html/html/css/screen-xs.less
+++ b/public_html/html/css/screen-xs.less
@@ -3,8 +3,12 @@
 	padding-left:10px;
 	padding-right:10px;
 }
-
-
+.center{
+	text-align: center;
+}
+.right{
+	text-align: center;
+}
 .navbar-header{
 	display:block;
 }
@@ -98,14 +102,11 @@
 	}
 }
 .footer-top{
-	padding:0px;
-	text-align:center;
+	.txt-cent{
+		padding-left:73px;
+	}
 	.pad-t-70{
 		padding-top:50px;
-	}
-	.txt-cent{
-		padding-left: 80px;
-		padding-bottom: 50px;
 	}
 } 
 
@@ -139,7 +140,18 @@
 .dis-hide{
 	display: none;
 }
+.a-register{
+	h2 {
+		font-size:30px;
+	}
+}
  
+.regis-red{
+	font-size: 27px; 
+ }
+ .regis-red:hover{
+		color: #ffffff;
+	}
 .format-stand {
 	max-width: 41%;
     left: 10%;
@@ -158,7 +170,13 @@
 		padding: 2px 3px;
 	}
 }
-
+.regis {
+	font-size:30px;
+}
+.regis-red{
+	margin:0px;
+	min-width: 267px;
+}
 
 .learn-content {
     margin-left: 0px;
@@ -172,18 +190,41 @@
 	text-align: center;
 	a{
 		margin-left: 0px;
+		padding: 15px 19px;
+		font-size: 27px;
 	}
 }
-
+.learn-content{
+	.right {
+	    padding-right: 0px;
+	    text-align: center;
+	    img{
+	    	margin-right:0px;
+	    }
+	}
+}
+.h2-red {
+	font-size:27px;
+}
+.learn-content{
+	.right {
+	    padding-right: 25px;
+	    text-align: center;
+	}
+}
 .footer-top{
 	padding:0px;
-	text-align:center;
+	.txt-cent{
+		padding-left:73px;
+	}
+	.padd-cent{
+		padding-left: 57px;
+	}
+	.img-right{
+			margin-left: 0px;
+		}
 	.pad-t-70{
 		padding-top:50px;
-	}
-	.txt-cent{
-		padding-left: 80px;
-		padding-bottom: 50px;
 	}
 } 
    
