--- a/public_html/html/css/screen-sm.less
+++ b/public_html/html/css/screen-sm.less
@@ -11,6 +11,9 @@
 .navbar-nav > li:not(:last-child) {
     margin-right: 0px;
 }
+.bo-intro {
+    padding: 5% 38%;
+}
 
 .mar-t-150 {
     margin-top: 70px;
@@ -26,8 +29,8 @@
 }
 	
 .format-stand{
-	padding-bottom:0px;
-	left: 15%;
+	left: 18%;
+    padding-bottom: 39px;
 	h4{
 		font-size:17px;
 	}
@@ -55,6 +58,17 @@
     min-height: 161px;
     padding: 38px 30px;
 }
+
+.footer-top{
+	.txt-cent{
+		margin-top:53px;
+		padding-left: 53px;
+	}
+	.img-right{
+			margin-left: 95px;
+	}
+}
+
 }
 
 @media screen and (min-width: 768px){
