--- a/public_html/html/css/styles.css
+++ b/public_html/html/css/styles.css
@@ -3,9 +3,28 @@
 */
 body {
   background: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Roboto', sans-serif;
 }
 .mar-t-10 {
   margin-top: 10px;
+}
+.padd-t-30 {
+  padding-top: 30px;
 }
 .mar-t-20 {
   margin-top: 20px;
@@ -28,6 +47,9 @@ body {
 .mar-bt-50 {
   margin-bottom: 50px;
 }
+.mar-bt-100 {
+  margin-bottom: 100px;
+}
 .container-fluid {
   max-width: 100%;
   padding-left: 0px;
@@ -47,6 +69,7 @@ body {
   margin-top: 6.75px;
   padding-bottom: 7.25px;
   padding-top: 7.25px;
+  font-family: 'Roboto', sans-serif;
 }
 .navbar-default {
   background-color: #bf1e2e;
@@ -77,16 +100,16 @@ body {
 /*End menu */
 /*slider */
 .format-stand {
-  left: 19%;
+  left: 17%;
   padding-bottom: 9%;
-  right: 48%;
+  right: 50%;
   text-shadow: none;
   text-transform: uppercase;
-  font-weight: bold;
 }
 .format-stand h4 {
-  font-size: 34px;
+  font-size: 40px;
   color: #bf1e2e;
+  font-weight: bold;
 }
 .format-stand p {
   color: #000000;
@@ -96,6 +119,8 @@ body {
   background-color: #383334;
   color: #ffffff;
   padding: 10px 30px;
+  font-weight: bold;
+  text-decoration: none;
 }
 /*end slider */
 .bg1 {
@@ -132,11 +157,11 @@ body {
 }
 .time-class1:hover {
   color: #ffffff;
-  background-color: #0586ad;
+  background-color: #1A9BC1;
 }
 .time-class:hover {
   color: #ffffff;
-  background-color: #0586ad;
+  background-color: #1A9BC1;
 }
 .time-class2 {
   background-color: #0586ad;
@@ -151,7 +176,7 @@ h4 {
 }
 .time-class-active {
   color: #ffffff;
-  background-color: #0586ad;
+  background-color: #1A9BC1;
 }
 .add-info {
   min-height: 170px;
@@ -159,7 +184,8 @@ h4 {
   max-width: 32%;
 }
 .add-info-active {
-  background-color: #0586AD;
+  background-color: #1A9BC1;
+  color: #ffffff;
 }
 .add-info-mid {
   background-color: #ffffff;
@@ -167,7 +193,8 @@ h4 {
   margin-left: 20px;
 }
 .add-info-mid:hover {
-  background-color: #0586AD;
+  background-color: #1A9BC1;
+  color: #ffffff;
 }
 .add-info-none {
   min-height: 170px;
@@ -176,15 +203,18 @@ h4 {
   background-color: #ffffff;
 }
 #add_right:hover {
-  background-color: #0586AD;
+  background-color: #1A9BC1;
+  color: #ffffff;
 }
 .regis-red {
   background-color: #bf1e2e;
   color: #fff;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 20px;
-  min-width: 270px;
+  font-size: 35px;
+  min-width: 513px;
+  min-height: 70px;
+  margin: 17px;
 }
 /* Limit practice */
 .content {
@@ -195,10 +225,9 @@ h4 {
   color: #bf1e2e;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 39px;
 }
 .question-right {
-  padding-top: 90px;
   padding-left: 90px;
 }
 .bag-gray {
@@ -210,8 +239,18 @@ h4 {
 .learn-content {
   padding-top: 50px;
   padding-bottom: 30px;
-  max-width: 500px;
-  margin-left: 335px;
+}
+.learn-content img {
+  margin-bottom: 15px;
+  width: 75px;
+  height: 75px;
+}
+.learn-content .right {
+  text-align: right;
+  padding-right: 25px;
+}
+.learn-content .right img {
+  margin-right: 33px;
 }
 .no-mar {
   margin-left: -5px;
@@ -258,30 +297,37 @@ h4 {
 }
 .bo-intro {
   background-color: #e5e5e5;
-  padding: 7% 27%;
-  height: 283px;
+  padding: 11% 27%;
+  height: 241px;
+}
+.bo-intro img {
+  height: 170px;
 }
 /* END Limit practice */
 /*JLIT Free */
+.a-register {
+  height: 560px;
+  padding-top: 145px;
+}
 .a-register h2 {
-  font-size: 30px;
+  font-size: 45px;
   font-weight: bold;
-  margin-bottom: 50px;
+  margin-bottom: 65px;
   color: #ffffff;
 }
 .a-register a {
   background-color: #ab2929;
   color: #ffffff;
-  padding: 5px 50px;
-  font-size: 30px;
+  padding: 15px 160px;
+  font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
-  border: 3px solid #e79c9c;
+  border: 5px solid #e79c9c;
   border-radius: 5px;
 }
 .a-register img {
-  width: 30px;
+  width: 40px;
 }
 .text-format {
   text-align: justify;
@@ -295,6 +341,16 @@ h4 {
   padding-bottom: 120px;
   padding-left: 0px;
   padding-right: 0px;
+}
+.footer-top .img-right {
+  margin-left: 250px;
+}
+.footer-top .txt-cent {
+  margin-top: 53px;
+  padding-left: 67px;
+}
+.footer-top .txt-cent p {
+  margin-top: 10px;
 }
 .pad-t-70 {
   padding-top: 70px;
@@ -311,6 +367,12 @@ h4 {
   .container {
     padding-left: 10px;
     padding-right: 10px;
+  }
+  .center {
+    text-align: center;
+  }
+  .right {
+    text-align: center;
   }
   .navbar-header {
     display: block;
@@ -397,16 +459,11 @@ h4 {
   .a-register a {
     margin-left: 0px;
   }
-  .footer-top {
-    padding: 0px;
-    text-align: center;
+  .footer-top .txt-cent {
+    padding-left: 73px;
   }
   .footer-top .pad-t-70 {
     padding-top: 50px;
-  }
-  .footer-top .txt-cent {
-    padding-left: 80px;
-    padding-bottom: 50px;
   }
 }
 @media (max-device-width: 480px) {
@@ -436,6 +493,15 @@ h4 {
   .dis-hide {
     display: none;
   }
+  .a-register h2 {
+    font-size: 30px;
+  }
+  .regis-red {
+    font-size: 27px;
+  }
+  .regis-red:hover {
+    color: #ffffff;
+  }
   .format-stand {
     max-width: 41%;
     left: 10%;
@@ -454,6 +520,13 @@ h4 {
     background-color: #383334;
     padding: 2px 3px;
   }
+  .regis {
+    font-size: 30px;
+  }
+  .regis-red {
+    margin: 0px;
+    min-width: 267px;
+  }
   .learn-content {
     margin-left: 0px;
     padding-left: 0px;
@@ -466,17 +539,37 @@ h4 {
   }
   .a-register a {
     margin-left: 0px;
+    padding: 15px 19px;
+    font-size: 27px;
+  }
+  .learn-content .right {
+    padding-right: 0px;
+    text-align: center;
+  }
+  .learn-content .right img {
+    margin-right: 0px;
+  }
+  .h2-red {
+    font-size: 27px;
+  }
+  .learn-content .right {
+    padding-right: 25px;
+    text-align: center;
   }
   .footer-top {
     padding: 0px;
-    text-align: center;
+  }
+  .footer-top .txt-cent {
+    padding-left: 73px;
+  }
+  .footer-top .padd-cent {
+    padding-left: 57px;
+  }
+  .footer-top .img-right {
+    margin-left: 0px;
   }
   .footer-top .pad-t-70 {
     padding-top: 50px;
-  }
-  .footer-top .txt-cent {
-    padding-left: 80px;
-    padding-bottom: 50px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -486,6 +579,9 @@ h4 {
   }
   .navbar-nav > li:not(:last-child) {
     margin-right: 0px;
+  }
+  .bo-intro {
+    padding: 5% 38%;
   }
   .mar-t-150 {
     margin-top: 70px;
@@ -499,8 +595,8 @@ h4 {
     max-width: 537px;
   }
   .format-stand {
-    padding-bottom: 0px;
-    left: 15%;
+    left: 18%;
+    padding-bottom: 39px;
   }
   .format-stand h4 {
     font-size: 17px;
@@ -526,6 +622,13 @@ h4 {
     min-height: 161px;
     padding: 38px 30px;
   }
+  .footer-top .txt-cent {
+    margin-top: 53px;
+    padding-left: 53px;
+  }
+  .footer-top .img-right {
+    margin-left: 95px;
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .format-stand {
@@ -535,6 +638,13 @@ h4 {
   }
   .format-stand h4 {
     font-size: 24px;
+  }
+  .footer-top .txt-cent {
+    margin-top: 53px;
+    padding-left: 3px;
+  }
+  .footer-top .img-right {
+    margin-left: 95px;
   }
 }
 @media (min-width: 1200px) and (max-width: 1300px) {
