--- a/public_html/html/css/style.less
+++ b/public_html/html/css/style.less
@@ -236,7 +236,7 @@ h4{
 	background-color:@color-gray;
 }
 .bag-red{
-	background-color:@color-red;
+	background-color:#C00000;
 }
 .learn-content{
 	padding-top:50px;
@@ -278,7 +278,7 @@ h4{
 	}
 }
 .body-red{
-	background-color:@color-red;
+	background-color:#C53448;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	padding-left: 30px;
