--- a/public_html/html/css/styles.css
+++ b/public_html/html/css/styles.css
@@ -234,7 +234,7 @@ h4 {
   background-color: #f2f2f2;
 }
 .bag-red {
-  background-color: #bf1e2e;
+  background-color: #C00000;
 }
 .learn-content {
   padding-top: 50px;
@@ -274,7 +274,7 @@ h4 {
   font-weight: bold;
 }
 .body-red {
-  background-color: #bf1e2e;
+  background-color: #C53448;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 30px;
