--- a/public_html/html/css/style.less
+++ b/public_html/html/css/style.less
@@ -203,7 +203,7 @@ h4{
 	.add-info-active;
 }
 .regis-red{
-	background-color: @color-red;
+	background-color: #C00000;
     color: #fff;
     text-transform: uppercase;
     font-weight: bold;
@@ -213,7 +213,9 @@ h4{
     margin: 17px;
 }
 
-
+.regis-red:hover {
+    color: #ffffff;
+  }
 
 
 
