--- a/public_html/wp-content/themes/virtue/assets/css/virtue.css
+++ b/public_html/wp-content/themes/virtue/assets/css/virtue.css
@@ -393,7 +393,7 @@ h4 {
     margin-top: 15%;
 }
 .modal-dialog {
-    width: 870px;
+    width: 800px;
 }
 
 .scroll-top-wrapper {
@@ -566,7 +566,7 @@ h4 {
     padding-top: 50px;
   }
   .modal-dialog {
-    width: 339px;
+    width: 100%;
 }
 }
 @media (max-device-width: 480px) {
@@ -578,8 +578,8 @@ h4 {
    .bo-intro {
     height: 250px;
   }
-  .modal-dialog {
-    width: 339px;
+.modal-dialog {
+    width: 100%;
 }
   .question-right {
     padding-top: 0px;
@@ -688,6 +688,9 @@ h4 {
   }
     .navbar-collapse {
     padding-left: 5px;
+}
+.modal-dialog {
+    width: 100%;
 }
 .mar-r{
 	margin-right: 22%;
