--- a/public_html/wp-content/themes/virtue/assets/css/virtue.css
+++ b/public_html/wp-content/themes/virtue/assets/css/virtue.css
@@ -22,7 +22,7 @@ h6 {
     font-family: 'Roboto', sans-serif;
 }
 .container{
-    max-width: 1140px;
+    max-width: 940px;
 }
 .mar-t-10 {
     margin-top: 10px;
@@ -40,7 +40,7 @@ h6 {
     margin-top: 50px;
 }
 .mar-t-150 {
-    margin-top: 150px;
+    margin-top: 50px;
 }
 .mar-bt-20 {
     //margin-bottom: 20px;
@@ -142,7 +142,7 @@ h6 {
 .navbar-default .navbar-text {
     color: #222;
 }
-.navbar-default .navbar-nav > li > a {
+.navbar-default .learn-content.navbar-nav > li > a {
     color: #ffffff;
 }
 .hei-menu {
@@ -307,9 +307,9 @@ h4 {
     width: 75px;
     height: 75px;
 }
-.learn-content .right {
+.learn-content .col-sm-6.right {
     text-align: right;
-    padding-right: 25px;
+    padding-right: 15px;
 }
 .learn-content .right img {
     margin-right: 33px;
@@ -337,14 +337,10 @@ h4 {
 }
 .body-red {
     background-color: #C53448;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 20px;
     color: #ffffff;
     text-align: justify;
     text-justify: inter-word;
-    min-height: 220px;
 }
 .intro-title {
     background-color: #f1f1f1;
@@ -367,8 +363,8 @@ h4 {
 /* END Limit practice */
 /*JLIT Free */
 .a-register {
-    height: 560px;
-    padding-top: 145px;
+    height: 360px;
+    padding-top: 25px;
 }
 .a-register h2 {
     font-size: 45px;
@@ -419,8 +415,8 @@ a:hover > .bo-intro {
 /*Footer */
 .footer-top {
     background-color: #dadada;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 20px;
+    padding-bottom: 60px;
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -466,7 +462,7 @@ a:hover > .bo-intro {
 .scroll-top-wrapper:hover {
     background-color: #888888;
 }
-.scroll-top-wrapper.show {
+.scroll-top-wrapper.show .bo-intro{
     visibility:visible;
     cursor:pointer;
     opacity: 1.0;
@@ -535,7 +531,7 @@ a:hover > .bo-intro {
         max-width: 97%;
     }
     .add-info-mid {
-        margin-left: 0px;
+        margin-left: 0px;.mar-t-150
         margin-right: 0px;
     }
     .add-info-none {
@@ -603,161 +599,7 @@ a:hover > .bo-intro {
     }
 }
 */
-@media (max-width: 480px) {
-    .form-horizontal {
-        margin: 10px 20px;
-    }
-    .form-horizontal .form-group {
-        margin-left: 0px;
-    }
-    .add-info {
-        max-width: 97%;
-        padding-top: 10px !important;
-    }
-    .add-info-mid {
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-    .add-info-none {
-        max-width: 97%;
-    }
-    .center {
-        text-align: center;
-    }
-    .right {
-        text-align: center;
-    }
-    .bo-intro {
-        height: 250px;
-    }
-    .learn-content {
-        margin-left: 60px;
-    }
-    .none-padd {
-        margin-bottom: 30px;
-    }
-    .add-info-mid {
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-    .question-right {
-        padding-left: 25px;
-        text-align: justify;
-    }
-    #message .text-format{
-        padding-left: 25px;
-    }
-    .footer-botton{
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-    #voice_content3 img, #voice_content2 img, #voice_content1 img{
-        width: 150px;
-        height: 150px;
-    }
-    
-    .dis-hide {
-        display: none;
-    }
-    .a-register h2 {
-        font-size: 30px;
-    }
-    .row-regis-red {
-        padding-bottom: 10px;
-    }
-    .regis-red {
-        font-size: 27px;
-        margin: 0px;
-        min-width: 50px;        
-    }
-    .regis-red:hover {
-        color: #ffffff;
-    }
-    .text-left{        
-        font-size: 12px;
-        left: 5% !important;
-    }
-    .text-left h4{        
-        font-size: 16px !important;
-        line-height: 30px !important;
-    }
-    .text-left a {
-        background-color: #383334 !important;
-        padding: 6px 6px !important;
-    }
-    .format-stand {
-        max-width: 41%;
-        left: 10%;
-        right: 0px;
-        text-shadow: none;
-        font-size: 5px;
-    }
-    .format-stand h4 {
-        font-size: 7px;
-    }
-    .format-stand p {
-        color: #000000;
-        margin-bottom: 0px;
-    }
-    .format-stand a {
-        background-color: #383334;
-        padding: 2px 3px;
-    }
-    #class3 > h4, #class1 > h4, #class2 > h4{
-        font-size: 16px;
-    }
-    .mar-bt-20{
-        padding-left: 5px;
-    }
-    .regis {
-        font-size: 20px;
-    }
-    .learn-content {
-        margin-left: 0px;
-        padding-left: 0px;
-        max-width: 100%;
-        padding-bottom: 30px;
-        padding-top: 50px;
-    }
-    .a-register {
-        text-align: center;
-    }
-    .a-register a {
-        margin-left: 0px;
-        font-size: 20px;
-        padding: 15px 40px;
-    }
-    .learn-content .right {
-        padding-right: 0px;
-        text-align: center;
-    }
-    .learn-content .right img {
-        margin-right: 0px;
-    }
-    .h2-red {
-        font-size: 27px;
-    }
-    .learn-content .right {
-        padding-right: 25px;
-        text-align: center;
-    }
-    .footer-top {
-        padding: 0px;
-    }
-    .footer-top .txt-cent {
-        padding-left: 73px;
-    }
-    .footer-top .padd-cent {
-        padding-left: 57px;
-    }
-    .footer-top .img-right {
-        margin-left: 0px;
-    }
-    .footer-top .pad-t-70 {
-        padding-top: 50px;
-        padding-left: 70px;
-    }
-}
+
 #fixed-sequence {
     height: 525px;
     margin: 0 auto;
@@ -765,9 +607,24 @@ a:hover > .bo-intro {
     position: relative;
     width: 100%;
 }
+#note{
+    background-color: #f2f2f2;
+}
+#mnote{
+    display: none;    
+}
 .head-img {
     background: url("../img/vir/banner.png") no-repeat scroll center center / 100% auto rgba(0, 0, 0, 0);
 }
+/*
+.note-img {
+    background: url("../img/vir/note.png") no-repeat scroll center center / 100% auto rgba(0, 0, 0, 0);
+    height: 356px;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}*/
 .bg-height {
     height: 525px;
     position: relative;
@@ -815,14 +672,185 @@ a:hover > .bo-intro {
 .text-left img {
     margin-top: 23px;
 }
-
+@media (max-width: 480px) {
+    #fixed-sequence{
+        height: 350px !important;
+    }
+    .bg-height {
+        height: 350px !important;
+    }    
+    .form-horizontal {
+        margin: 10px 20px;
+    }
+    .add-info h4{
+        line-height: 20px;
+        padding-bottom: 15px;
+    }
+    .add-info {
+        max-width: 97%;
+        padding-top: 10px !important;
+    }
+    .add-info-mid {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .add-info-none {
+        max-width: 97%;
+    }
+    .center {
+        text-align: center;
+    }
+    .right {
+        text-align: center;
+    }
+    .bo-intro {
+        height: 270px;
+    }
+    .none-padd {
+        margin-bottom: 30px;
+    }
+    .add-info-mid {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .question-right {
+        padding-left: 25px;
+        text-align: justify;
+    }
+    #message .text-format{
+        padding-left: 25px;
+    }
+    .footer-botton{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    #voice_content3 img, #voice_content2 img, #voice_content1 img{
+        width: 150px;
+        height: 150px;
+    }
+    
+    .dis-hide {
+        display: none;
+    }
+    .a-register h2 {
+        font-size: 30px;
+    }
+    .row-regis-red {
+        padding-bottom: 10px;
+    }
+    .regis-red {
+        font-size: 20px;
+        margin: 0px;
+        min-width: 50px;        
+    }
+    .regis-red:hover {
+        color: #ffffff;
+    }
+    .text-left {
+        font-size: 12px;
+        left: 23% !important;
+        top: 30% !important;
+    }
+    .text-left h4{        
+        font-size: 16px !important;
+        line-height: 30px !important;
+    }
+    .text-left a {
+        background-color: #383334 !important;
+        padding: 6px 6px !important;
+    }
+    .format-stand {
+        max-width: 41%;
+        left: 10%;
+        right: 0px;
+        text-shadow: none;
+        font-size: 5px;
+    }
+    .format-stand h4 {
+        font-size: 7px;
+    }
+    .format-stand p {
+        color: #000000;
+        margin-bottom: 0px;
+    }
+    .format-stand a {
+        background-color: #383334;
+        padding: 2px 3px;
+    }
+    #class3 > h4, #class1 > h4, #class2 > h4{
+        font-size: 16px;
+    }
+    .mar-bt-20{
+        padding-left: 5px;
+    }
+    .mar-t-150{
+        margin-top: 10px;
+    }
+    .mar-t-50{
+        margin-top: 10px;
+    }
+    .regis {
+        font-size: 20px;
+    }
+    #register .regis {
+        font-size: 16px;
+    }
+    .learn-content {
+        margin-left: 0px;
+        padding-left: 0px;
+        max-width: 100%;
+        padding-bottom: 30px;
+        padding-top: 50px;
+    }
+    .a-register {
+        text-align: center;
+    }
+    .a-register a {
+        margin-left: 0px;
+        font-size: 20px;
+        padding: 15px 40px;
+    }
+    .learn-content .col-sm-6.right {
+        padding-left: 11%;
+    }
+    .h2-red {
+        font-size: 27px;
+    }
+    .footer-top {
+        padding: 0px;
+    }
+    .footer-top .txt-cent {
+        padding-left: 73px;
+    }
+    .footer-top .padd-cent {
+        padding-left: 57px;
+    }
+    .footer-top .img-right {
+        margin-left: 0px;
+    }
+    .footer-top .pad-t-70 {
+        padding-top: 30px;
+        padding-left: 70px;
+    }
+}
 /* Mobile Menu */
 @media (max-width: 767px) {
+    #mnote{
+        display: block;    
+    }
+    #note{
+        display: none;    
+    }
+
+    .form-horizontal .form-group {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
     .text-left{
         background: url("../img/bg1px.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
     }
     .head-img {
-        background: url("../img/mbanner.png") no-repeat scroll center center / 100% auto rgba(0, 0, 0, 0);
+        background: url("../img/vir/mbanner.png") no-repeat scroll center center / 100% auto rgba(0, 0, 0, 0);
     }
     #header .md{
         display: none;
@@ -847,7 +875,10 @@ a:hover > .bo-intro {
         background-color: #eee;
         color: #555;
     }
-
+    .learn-content .col-sm-6{
+        display: inline-block;
+    }
+    
     .learn-content img{
         width: 50px;
         height: 50px;
@@ -862,18 +893,29 @@ a:hover > .bo-intro {
         min-height: 120px;
     }
     #class1.add-info, #class2.add-info, #class3.add-info{
-        padding-top: 5px;
-        min-height: 70px;
+        padding-top: 0px;
+        min-height: 20px;
     }
     #class1.add-info > h4, #class2.add-info > h4, #class3.add-info > h4{
         margin-top: 0px;
+        margin-bottom: 0px;
+        font-size: 16px;
     }
     .add-info-mid {
         border-top: 1px solid #ebeae8;
         border-bottom: 1px solid #ebeae8;
     }
     .mar-bt-100 {
-        margin-bottom: 50px;
+        margin-bottom: 20px;
+    }
+    .a-register {
+        margin-top: 10px;
+        height: 260px;
+        padding-top: 15px;        
+    }
+    .a-register h2{
+        line-height: 40px;
+        margin-bottom: 40px;
     }
 }
 @media (min-width: 481px) and (max-width: 767px) {
@@ -918,7 +960,7 @@ a:hover > .bo-intro {
         padding-right: 10px;
     }
     .bo-intro {
-        padding: 11% 38%;
+        padding: 7% 38%;
     }
     .navbar-collapse {
         padding-left: 15px;
@@ -946,7 +988,8 @@ a:hover > .bo-intro {
     .form-horizontal {
         margin-left: 10px;
         margin-right: 0px;
-    }
+    }    
+    
     .pad-l-50 {
         padding-left: 55px;
         padding-top: 10px;
@@ -973,7 +1016,7 @@ a:hover > .bo-intro {
         text-align: justify;
     }
     .mar-t-150 {
-        margin-top: 50px;
+        margin-top: 30px;
     }
     .a-register h2 {
         font-size: 35px;
@@ -1000,9 +1043,9 @@ a:hover > .bo-intro {
         padding-bottom: 30px;
         padding-top: 50px;        
     }
-    .learn-content .right{
-        text-align: center;
-        padding-left: 50px;
+    
+    .learn-content .col-sm-6.right{
+        padding-left: 22%;
     }
     .a-register {
         text-align: center;
@@ -1016,13 +1059,16 @@ a:hover > .bo-intro {
     .footer-top .txt-cent {
         padding-left: 73px;
     }
+    .footer-top .padd-cent {
+        padding-left: 57px;
+    }
     .footer-top .pad-t-70 {
         padding-top: 50px;
         padding-left: 70px;
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) {
     .text-left {
         left: 7%;
     }
@@ -1039,22 +1085,24 @@ a:hover > .bo-intro {
     .ip-smar{
         width: 950px;
     }
+    .navbar-nav{
+        font-size: 16px;
+    }
     .navbar-nav > li:not(:last-child) {
         margin-right: 0px;
     }
     .bo-intro {
-        padding: 5% 38%;
+        background-color: #e5e5e5;
+        cursor: pointer;
+        height: 277px;
+        padding: 20% 27%;
     }
     .mar-t-150 {
-        margin-top: 70px;
+        margin-top: 50px;
     }
     .question-right {
         padding-left: 37px;
         padding-top: 17px;
-    }
-    .learn-content {
-        margin-left: 80px;
-        max-width: 537px;
     }
     .format-stand {
         left: 18%;
@@ -1080,17 +1128,32 @@ a:hover > .bo-intro {
     }
     .body-red {
         margin-bottom: 5px;
-        min-height: 161px;
-        padding: 38px 30px;
+        min-height: 250px;
     }
     .footer-top .txt-cent {
         margin-top: 53px;
         padding-left: 53px;
     }
+    .footer-top .padd-cent {
+        padding-left: 57px;
+    }
     .footer-top .img-right {
         margin-left: 95px;
     }
+    #form-register .container{
+        width: 768px;
+    }
+    #class1.add-info, #class2.add-info, #class3.add-info{
+        padding-top: 5px;
+        min-height: 70px;
+    }
+    #class1.add-info > h4, #class2.add-info > h4, #class3.add-info > h4{
+        margin-top: 0px;
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
+/*
 @media (min-width: 992px) and (max-width: 1199px) {
     .format-stand {
         //left: 56%;
@@ -1127,3 +1190,4 @@ a:hover > .bo-intro {
         font-size: 27px;
     }
 }
+*/
