--- a/public_html/wp-content/themes/virtue/assets/css/virtue.css
+++ b/public_html/wp-content/themes/virtue/assets/css/virtue.css
@@ -1186,7 +1186,7 @@ a:hover > .bo-intro {
         padding-left: 53px;
     }
     .footer-top .padd-cent {
-        padding-left: 57px;
+        //padding-left: 57px;
     }
     .footer-top .img-right {
         margin-left: 95px;
